--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -17,14 +17,30 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # Steps represent a sequence of tasks tha Code
+ Issues 0
+ Pull requests 0 Actions
+ Projects 0
+ Wiki
+ Security 0
+ Insights
+ Settings
+Branch: master 
+bootcamp2020/.github/workflows/auto_deploy.yml
+Find fileCopy path
+￼ mubashir105 Create auto_deploy.yml
+0ab75c4 2 minutes ago
+1 contributor
+36 lines (29 sloc)  1.11 KB
+RawBlameHistory
+￼ t will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
     - name: Installing Node
-      run: action/setup-node@v2-beta
+      run: actions/setup-node@v2-beta
       with:
         node-version: 12
       
